[2008--] 0.9.2
+ Plugins: Added {a} to build 'a' html tags
+ Plugins: Added {tif} that acts as a ternary if / allows you to use a ternary
  operator inside it
* The compiler now allows \r, \n and \t to be parameter splitters as well as
  "," and " ". You can therefore make complex function calls on multiple lines
* Converted most of the code to follow PEAR Coding Standards, hopefully this
  didn't break anything that the tests missed

[2008-05-30] 0.9.1
+ API: Added Dwoo_Compiler->setAutoEscape() and getAutoEscape() to modify the
  automatic html entity escaping setting. This is disabled by default, and when
  enabled can be overriden with the {safe $var} plugin or the
  {auto_escape disable} block plugin. The block plugin can also be used to
  enable this mode from within a template
+ Syntax: Mixing named and unnamed parameters is now allowed, as long as the
  unnamed ones appear first
+ Syntax: Added {/} shortcut that closes the last opened block
* Optimized scope-handling functions, {loop} and {with} are now slightly faster
* Fixed a bug in {date_format} that prevented anything but unix timestamps to
  work
* {literal} and {strip} now follow the LooseOpeningsHandling setting
* Fixed complex variables (i.e. {$_root[$c[$x.0]].0}) parsing bugs
* Fixed $dwoo->addResource() breaking if the resource class was not loaded yet,
  autoload should now be called (thanks mike)
* Fixed a block stack bug that messed up {textformat} and possibly usermade
  block plugins

[2008-05-10] 0.9.0
! BC Break: changed all class names to be PEAR compliant (aka use underscores
  to separate words/paths), sorry about that but I better do it now than in
  six months
! BC Break: $dwoo->output() and get() have been swapped internally, but it
  doesn't change anything for you unless you called output(*, *, *, true)
  directly to emulate get(). This was done to reduce some overhead
! BC Break: $dwoo->getTemplate() changed to $dwoo->templateFactory() and